// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 generateConfig 函数 1`] = `
Object {
  "domain": "localhost",
  "port": 8080,
  "server": "http://localhost",
  "time": 2019,
}
`;

exports[`测试 generateConfig 函数 2`] = `
Object {
  "domain": "localhost",
  "port": 8081,
  "server": "http://localhost",
  "time": Any<Date>,
}
`;
